--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2>Become a web developer</h2>
             <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
                 to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
-            <a class="link-button" target="_blank" href="">DOWNLOAD RESUME</a>
+            <a class="link-button" target="_blank" href="https://mynuddn.github.io/developer-portfolio/">DOWNLOAD RESUME</a>
         </div>
     </section>
     <section class="experience-area">
